syntax = "proto3";

service Reviews {
    rpc CreateReview (CreateReviewRequest) returns (CreateReviewResponse);
    rpc GetRatingByItemId (GetRatingByItemIdRequest) returns (GetRatingByItemIdResponse);
}

message CreateReviewRequest {
    Review review = 1;
}

message CreateReviewResponse {
    bool succes = 1;
}

message Review {
    int32 user_id = 1;
    int32 item_id = 2;
    int32 rating = 3;
    string message = 4;
}

message GetRatingByItemIdRequest {
    int32 item_id = 1;
}

message GetRatingByItemIdResponse {
    float rating = 1;
}